--- a/contact.html
+++ b/contact.html
@@ -7,16 +7,26 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title></title>
+        <title>Contact Us</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="">
+        <link rel="stylesheet" href="index.css">
     </head>
     <body>
         <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
-        <h1>contact</h1>
+        <section><div><h1>Contact Us</h1><p>
+            Team Email: <a href="mailto:team@calamityrobotics.com">team@calamityrobotics.com</a> <br>
+            Instagram: <a style="text-decoration: none" href="https://instagram.com/8280_calamity">8280_calamity</a>
+            <br><b>Roles:</b><br>
+            Team Leader: Gavin Strazdins - <a href="mailto:corey@calamityrobotics.com">gavin@calamityrobotics.com</a> <br>
+            Outreach Lead: Corey Welm - <a href="mailto:corey@calamityrobotics.com">corey@calamityrobotics.com</a> <br>
+            Software Lead: Dante LaBelle - <a href="mailto:dante@calamityrobotics.com">dante@calamityrobotics.com</a> <br>
+            Design Lead: Porter Schmidt - <a href="mailto:porter@calamityrobotics.com">porter@calamityrobotics.com</a> <br>
+            Website Development and Social Media Lead: Harries Lloyd - <a href="mailto:harries@calamityrobotics.com">harries@calamityrobotics.com</a> <br>
+            Outreach assistant/Mascot: Zoey Ayers - <a href="mailto:zoey@calamityrobotics.com">zoey@calamityrobotics.com</a> <br>
+        </p><div><a href="index.html"><img src="icons/house-solid 1.png"></a></div></div></section>
         <script src="" async defer></script>
     </body>
 </html>
