--- a/robot.html
+++ b/robot.html
@@ -10,13 +10,13 @@
         <title></title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="">
+        <link rel="stylesheet" href="index.css">
     </head>
     <body>
         <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
-        <h1>robot</h1>
+        <section><div><h1>Our Robot</h1><div><a href="index.html"><img src="icons/house-solid 1.png"></a></div></div></section>
         <script src="" async defer></script>
     </body>
 </html>
