--- a/contact.html
+++ b/contact.html
@@ -24,8 +24,8 @@
             Outreach Lead: Corey Welm - <a href="mailto:corey@calamityrobotics.com">corey@calamityrobotics.com</a> <br>
             Software Lead: Dante LaBelle - <a href="mailto:dante@calamityrobotics.com">dante@calamityrobotics.com</a> <br>
             Design Lead: Porter Schmidt - <a href="mailto:porter@calamityrobotics.com">porter@calamityrobotics.com</a> <br>
-            Website Development and Social Media Lead: Harries Lloyd - <a href="mailto:harries@calamityrobotics.com">harries@calamityrobotics.com</a> <br>
-            Outreach assistant/Mascot: Zoey Ayers - <a href="mailto:zoey@calamityrobotics.com">zoey@calamityrobotics.com</a> <br>
+            Website Development Lead/Software Assistant : Harries Lloyd - <a href="mailto:harries@calamityrobotics.com">harries@calamityrobotics.com</a> <br>
+            Outreach Assistant/Mascot: Zoey Ayers - <a href="mailto:zoey@calamityrobotics.com">zoey@calamityrobotics.com</a> <br>
         </p><div><a href="index.html"><img src="icons/house-solid 1.png"></a></div></div></section>
         <script src="" async defer></script>
     </body>
