--- a/sponsors.html
+++ b/sponsors.html
@@ -16,7 +16,11 @@
         <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
-        <section><div><h1>Our Sponsors</h1><p>Website under development. Check back later!</p><div><a href="index.html"><img src="icons/house-solid 1.png"></a></div></div></section>
+        <section><div><h1>Our Sponsors</h1><div><a href="index.html"><img src="icons/house-solid 1.png"></a><p>
+            No sponsors yet!
+            <br><br>
+            If you want to sponsor us, please contact Corey Welm (<a href="mailto:corey@calamityrobotics.com">corey@calamityrobotics.com</a>)
+        </p></div></div></section>
         <script src="" async defer></script>
     </body>
 </html>
