--- a/contact.html
+++ b/contact.html
@@ -16,17 +16,18 @@
         <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
-        <section><div><h1>Contact Us</h1><p>
+        <section><div><h1>Contact Us</h1><a href="index.html"><img src="icons/house-solid 1.png"></a><p>
             Team Email: <a href="mailto:team@calamityrobotics.com">team@calamityrobotics.com</a> <br>
-            Instagram: <a style="text-decoration: none" href="https://instagram.com/8280_calamity">8280_calamity</a>
+            Instagram: <a style="text-decoration: none" href="https://instagram.com/calamity.8280">calamity.8280</a>
             <br><b>Roles:</b><br>
             Team Leader: Gavin Strazdins - <a href="mailto:corey@calamityrobotics.com">gavin@calamityrobotics.com</a> <br>
             Outreach Lead: Corey Welm - <a href="mailto:corey@calamityrobotics.com">corey@calamityrobotics.com</a> <br>
             Software Lead: Dante LaBelle - <a href="mailto:dante@calamityrobotics.com">dante@calamityrobotics.com</a> <br>
+            Build Lead: Kai Richardson -  <a href="mailto:kai@calamityrobotics.com">dante@calamityrobotics.com</a> <br>
             Design Lead: Porter Schmidt - <a href="mailto:porter@calamityrobotics.com">porter@calamityrobotics.com</a> <br>
-            Website Development Lead/Software Assistant : Harries Lloyd - <a href="mailto:harries@calamityrobotics.com">harries@calamityrobotics.com</a> <br>
-            Outreach Assistant/Mascot: Zoey Ayers - <a href="mailto:zoey@calamityrobotics.com">zoey@calamityrobotics.com</a> <br>
-        </p><div><a href="index.html"><img src="icons/house-solid 1.png"></a></div></div></section>
+            Website Development and Social Media Lead: Harries Lloyd - <a href="mailto:harries@calamityrobotics.com">harries@calamityrobotics.com</a> <br>
+            Outreach assistant/Mascot: Zoey Ayers - <a href="mailto:zoey@calamityrobotics.com">zoey@calamityrobotics.com</a> <br>
+        </p><div></div></div></section>
         <script src="" async defer></script>
     </body>
 </html>
