--- a/robot.html
+++ b/robot.html
@@ -16,7 +16,21 @@
         <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
-        <section><div><h1>Our Robot</h1><div><a href="index.html"><img src="icons/house-solid 1.png"></a><p>Website under construction! Please check back <i>after the final exams season...</i></p></div></div></section>
+        <header>
+            <div><a href="index.html"><img id="ic1" src="icons/house-solid 1.png"></a></div>
+                <div><a href="sponsors.html"><img id="ic2" src="icons/handshake-solid 1.png"></a></div>
+               <div><a href="contact.html"><img id="ic3" src="icons/paper-plane-regular 1.png"></a></div>
+
+        </header>
+        <section class="title" id="robottitle"><div class="titlecenter"><h1>Our Robot</h1></div></section>
+        <section class="blurb">
+            <div>
+            <p>
+                Our robot is currently in development, and we're excited to share more details about its design and capabilities with you soon. Stay tuned for updates on our latest robotic creation!
+            </p></div></section>
+            <footer>
+                <p>Calamity Robotics 2023</p>
+            </footer>
         <script src="" async defer></script>
     </body>
 </html>
