--- a/sponsors.html
+++ b/sponsors.html
@@ -16,11 +16,21 @@
         <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
-        <section><div><h1>Our Sponsors</h1><div><a href="index.html"><img src="icons/house-solid 1.png"></a><p>
-            No sponsors yet!
-            <br><br>
-            If you want to sponsor us, please contact Corey Welm (<a href="mailto:corey@calamityrobotics.com">corey@calamityrobotics.com</a>)
-        </p></div></div></section>
+        <header>
+            <div><a href="robot.html"><img id="ic1" src="icons/robot-solid.png"></a></div>
+                <div><a href="index.html"><img id="ic2" src="icons/house-solid 1.png"></a></div>
+               <div><a href="contact.html"><img id="ic3" src="icons/paper-plane-regular 1.png"></a></div>
+
+        </header>
+        <section class="title" id="sponsortitle"><div class="titlecenter"><h1>Our Sponsors</h1></div></section>
+        <section class="blurb">
+            <div>
+            <p>
+                While we do not have any sponsors at the moment, we are actively seeking partnerships and sponsorships to help us achieve our goals. If you or your organization are interested in collaborating with Calamity 8280 and becoming a valued sponsor, please don't hesitate to <a href="contact.html">reach out to us</a>. Your support will play a vital role in our journey towards success in the world of robotics. Stay tuned for updates on our future sponsors!
+            </p></div></section>
+            <footer>
+                <p>Calamity Robotics 2023</p>
+            </footer>
         <script src="" async defer></script>
     </body>
 </html>
