--- a/contact.html
+++ b/contact.html
@@ -18,9 +18,10 @@
         <![endif]-->
 
         <header>
+            <div><a href="index.html"><img id="ic1" src="icons/house-solid 1.png"></a></div>
             <div><a href="robot.html"><img id="ic1" src="icons/robot-solid.png"></a></div>
                 <div><a href="sponsors.html"><img id="ic2" src="icons/handshake-solid 1.png"></a></div>
-               <div><a href="index.html"><img id="ic3" src="icons/house-solid 1.png"></a></div>
+               <div><a class="active" href="contact.html"><img id="ic3" src="icons/paper-plane-regular 1.png"></a></div>
 
         </header>
         <section class="title" id="contacttitle"><div class="titlecenter"><h1>Contact Us</h1></div></section>
@@ -34,8 +35,7 @@
                     Outreach Lead: Corey Welm - <a href="mailto:corey@calamityrobotics.com">corey@calamityrobotics.com</a> <br>
                     Programming Lead: Dante LaBelle - <a href="mailto:dante@calamityrobotics.com">dante@calamityrobotics.com</a> <br>
                     Build Lead: Kai Richardson -  <a href="mailto:kai@calamityrobotics.com">kai@calamityrobotics.com</a> <br>
-                    Design Lead: Porter Schmidt - <a href="mailto:porter@calamityrobotics.com">porter@calamityrobotics.com</a> <br>
-                    Website Development and Programming Assistant: Harries Lloyd - <a href="mailto:harries@calamityrobotics.com">harries@calamityrobotics.com</a> <br>
+                    Graphic Design/Programming: Harries Lloyd - <a href="mailto:harries@calamityrobotics.com">harries@calamityrobotics.com</a> <br>
                 </p>
             </div>
         </section>
