--- a/robot.html
+++ b/robot.html
@@ -18,6 +18,7 @@
         <![endif]-->
         <header>
             <div><a href="index.html"><img id="ic1" src="icons/house-solid 1.png"></a></div>
+            <div><a class="active" href="robot.html"><img id="ic1" src="icons/robot-solid.png"></a></div>
                 <div><a href="sponsors.html"><img id="ic2" src="icons/handshake-solid 1.png"></a></div>
                <div><a href="contact.html"><img id="ic3" src="icons/paper-plane-regular 1.png"></a></div>
 
