--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
         <header>
+            <div><a  class="active" href="index.html"><img id="ic1" src="icons/house-solid 1.png"></a></div>
             <div><a href="robot.html"><img id="ic1" src="icons/robot-solid.png"></a></div>
                 <div><a href="sponsors.html"><img id="ic2" src="icons/handshake-solid 1.png"></a></div>
                <div><a href="contact.html"><img id="ic3" src="icons/paper-plane-regular 1.png"></a></div>
