--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="index.css">
-        <link rel="icon" type="image/x-icon" href="/icons/earf.png">
+        <link rel="icon" type="image/x-icon" href="/images/Earf.png">
     </head>
     <body>
         
