Add meta descriptions for search engine results

--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>Contact Us</title>
-        <meta name="description" content="">
+        <meta name="description" content="Get in touch with Calamity 8280, Park City's FTC Robotics Team. Reach out to us for inquiries, collaborations, or to join our passionate robotics community!">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="index.css">
         <link rel="icon" type="image/x-icon" href="/images/Earf.png">
