--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>Calamity Robotics</title>
-        <meta name="description" content="">
+        <meta name="description" content="Calamity 8280 - Park City's FTC Robotics Team. Explore our robotics journey, projects, and competitions. Join us in the world of innovation and technology!">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="index.css">
         <link rel="icon" type="image/x-icon" href="/images/Earf.png">
