--- a/sponsors.html
+++ b/sponsors.html
@@ -8,7 +8,7 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>Sponsors</title>
-        <meta name="description" content="">
+        <meta name="description" content="Support innovation and education with Calamity 8280! Learn how you or your organization can become a sponsor and make a lasting impact on our robotics journey and community.">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="index.css">
         <link rel="icon" type="image/x-icon" href="/images/Earf.png">
