--- a/robot.html
+++ b/robot.html
@@ -8,7 +8,7 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>Our Robot</title>
-        <meta name="description" content="">
+        <meta name="description" content="Check out our robot!">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="index.css">
         <link rel="icon" type="image/x-icon" href="/images/Earf.png">
