--- a/contact.html
+++ b/contact.html
@@ -8,41 +8,17 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>Contact Us</title>
-        <meta name="description" content="Get in touch with Calamity 8280, Park City's FTC Robotics Team. Reach out to us for inquiries, collaborations, or to join our passionate robotics community!">
+        <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="index.css">
-        <link rel="icon" type="image/x-icon" href="/images/Earf.png">
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
-
-        <header>
-            <div><a href="index.html"><img id="ic1" src="icons/house-solid 1.png"></a></div>
-            <div><a href="robot.html"><img id="ic1" src="icons/robot-solid.png"></a></div>
-                <div><a href="sponsors.html"><img id="ic2" src="icons/handshake-solid 1.png"></a></div>
-               <div><a class="active" href="contact.html"><img id="ic3" src="icons/paper-plane-regular 1.png"></a></div>
-
-        </header>
-        <section class="title" id="contacttitle"><div class="titlecenter"><h1>Contact Us</h1></div></section>
-        <section class="blurb">
-            <div>
-                <p>
-                    Team Email: <a href="mailto:team@calamityrobotics.com">team@calamityrobotics.com</a> <br>
-                    Instagram: <a style="text-decoration: none" href="https://instagram.com/calamity.8280">calamity.8280</a>
-                    <br><b>Roles:</b><br>
-                    Team Leader: Gavin Strazdins - <a href="mailto:corey@calamityrobotics.com">gavin@calamityrobotics.com</a> <br>
-                    Outreach Lead: Corey Welm - <a href="mailto:corey@calamityrobotics.com">corey@calamityrobotics.com</a> <br>
-                    Programming Lead: Dante LaBelle - <a href="mailto:dante@calamityrobotics.com">dante@calamityrobotics.com</a> <br>
-                    Build Lead: Kai Richardson -  <a href="mailto:kai@calamityrobotics.com">kai@calamityrobotics.com</a> <br>
-                    Graphic Design/Programming: Harries Lloyd - <a href="mailto:harries@calamityrobotics.com">harries@calamityrobotics.com</a> <br>
-                </p>
-            </div>
-        </section>
-        <footer>
-            <p>Calamity Robotics 2023</p>
-        </footer>
+        <p>
+            This page is still in development! Check back later.
+        </p>
         <script src="" async defer></script>
     </body>
 </html>
